--- a/Test_de_khi_deux.ipynb
+++ b/Test_de_khi_deux.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFUFxP/5kYnsSODjcV2Mjm",
+      "authorship_tag": "ABX9TyMXlQ5Rf6xBna/OPCIRdk6B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,38 +45,33 @@
         "import numpy as np\n",
         "import scipy.stats as stats\n",
         "\n",
-        "obs=np.array([[592,544],[119,97],[849,677],[504,451],[36,14]])\n",
+        "obs=np.array([[592,119,849,504,36],[544,97,677,451,14]])\n",
         "# Transpose the obs array to have shape (5, 2) to match the index and columns\n",
-        "df=pd.DataFrame(obs, index=list([\"BLOND\", \"ROUX\", \"CHATAIN\",\"BRUN\",\"NOIR\"]), columns=list( [\"HOMME\", \"FEMME\"]))\n",
-        "\n",
-        "df.loc[[\"BLOND\", \"ROUX\", \"CHATAIN\",\"BRUN\",\"NOIR\"], [\"HOMME\", \"FEMME\"]]\n",
+        "df=pd.DataFrame(obs, index=list([\"HOMME\", \"FEMME\"]), columns=list([\"BLOND\", \"ROUX\", \"CHATAIN\",\"BRUN\",\"NOIR\"]))\n",
         "df"
       ],
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 125
         },
         "id": "ytvteGua3Ydm",
-        "outputId": "f8e7c0e8-73ca-4054-b559-f06d88b3637b"
+        "outputId": "75004a66-25ed-4af9-abb9-54fcb76a570c"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "         HOMME  FEMME\n",
-              "BLOND      592    544\n",
-              "ROUX       119     97\n",
-              "CHATAIN    849    677\n",
-              "BRUN       504    451\n",
-              "NOIR        36     14"
+              "       BLOND  ROUX  CHATAIN  BRUN  NOIR\n",
+              "HOMME    592   119      849   504    36\n",
+              "FEMME    544    97      677   451    14"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-37824ed8-a20f-42a2-ac91-4006dd31f00f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8ed8fccc-3d91-45ed-82c6-48b2a55a28bf\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -95,34 +90,28 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>HOMME</th>\n",
-              "      <th>FEMME</th>\n",
+              "      <th>BLOND</th>\n",
+              "      <th>ROUX</th>\n",
+              "      <th>CHATAIN</th>\n",
+              "      <th>BRUN</th>\n",
+              "      <th>NOIR</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>BLOND</th>\n",
+              "      <th>HOMME</th>\n",
               "      <td>592</td>\n",
-              "      <td>544</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>ROUX</th>\n",
               "      <td>119</td>\n",
-              "      <td>97</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CHATAIN</th>\n",
               "      <td>849</td>\n",
-              "      <td>677</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>BRUN</th>\n",
               "      <td>504</td>\n",
-              "      <td>451</td>\n",
+              "      <td>36</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>NOIR</th>\n",
-              "      <td>36</td>\n",
+              "      <th>FEMME</th>\n",
+              "      <td>544</td>\n",
+              "      <td>97</td>\n",
+              "      <td>677</td>\n",
+              "      <td>451</td>\n",
               "      <td>14</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -131,7 +120,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-37824ed8-a20f-42a2-ac91-4006dd31f00f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8ed8fccc-3d91-45ed-82c6-48b2a55a28bf')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -183,12 +172,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-37824ed8-a20f-42a2-ac91-4006dd31f00f button.colab-df-convert');\n",
+              "        document.querySelector('#df-8ed8fccc-3d91-45ed-82c6-48b2a55a28bf button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-37824ed8-a20f-42a2-ac91-4006dd31f00f');\n",
+              "        const element = document.querySelector('#df-8ed8fccc-3d91-45ed-82c6-48b2a55a28bf');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -208,8 +197,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8ba2da95-a73e-440a-914c-0fa53a74dca0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8ba2da95-a73e-440a-914c-0fa53a74dca0')\"\n",
+              "<div id=\"df-31655c6d-5044-4430-955f-abecd3fbf060\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-31655c6d-5044-4430-955f-abecd3fbf060')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -328,14 +317,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8ba2da95-a73e-440a-914c-0fa53a74dca0 button');\n",
+              "        document.querySelector('#df-31655c6d-5044-4430-955f-abecd3fbf060 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_33b62d74-dbad-40f2-b2cc-8cd56f066bbc\">\n",
+              "  <div id=\"id_f3948fdf-cbad-4aef-8abe-aed4eff61831\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -379,7 +368,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_33b62d74-dbad-40f2-b2cc-8cd56f066bbc button.colab-df-generate');\n",
+              "        document.querySelector('#id_f3948fdf-cbad-4aef-8abe-aed4eff61831 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -396,11 +385,11 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "df",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"HOMME\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 338,\n        \"min\": 36,\n        \"max\": 849,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          119,\n          36,\n          849\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"FEMME\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 287,\n        \"min\": 14,\n        \"max\": 677,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          97,\n          14,\n          677\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"BLOND\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 33,\n        \"min\": 544,\n        \"max\": 592,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          544,\n          592\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ROUX\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 15,\n        \"min\": 97,\n        \"max\": 119,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          97,\n          119\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CHATAIN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 121,\n        \"min\": 677,\n        \"max\": 849,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          677,\n          849\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"BRUN\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 37,\n        \"min\": 451,\n        \"max\": 504,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          451,\n          504\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"NOIR\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 15,\n        \"min\": 14,\n        \"max\": 36,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          14,\n          36\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     }
